--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PortfolioTracker</title>
+    <title>PortfolioTrackFrontend</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= stylesheet_link_tag "custom" %>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
   </head>
 
+
   <body>
-  <!-- need to change if use bootstrap -->
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">Portfolio Tracker</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/users/new">Register</a></li>
+            <li><a href="/sessions/new">Login</a></li>
+          </ul>
+          <form class="navbar-form navbar-right">
+            <input type="text" class="form-control" placeholder="Search...">
+          </form>
+        </div>
+      </div>
+    </nav>
     <%= yield %>
+
   </body>
 </html>
